Fix keywords arrow styles & homepage featured excerpt alignment

--- a/wp-content/themes/chinapower/sass/components/_post-meta.scss
+++ b/wp-content/themes/chinapower/sass/components/_post-meta.scss
@@ -54,7 +54,7 @@
 			height: 0;
 			border-color: transparent transparent transparent $red;
 			border-style: solid;
-			border-width: 12px 0 12px 12px;
+			border-width: 11px 0 10px 12px;
 		}
 	}
 
