--- a/wp-content/themes/chinapower/sass/pages/_home.scss
+++ b/wp-content/themes/chinapower/sass/pages/_home.scss
@@ -67,6 +67,10 @@
 				}
 
 				.feature-excerpt {
+					@include breakpoint("medium") {
+						align-self: flex-end;
+					}
+					
 					p {
 						color: $white;
 					}
